# docker-django-example

./: Dockerfile  Dockerfile2  pyproject.toml
