[tool.black]
line-length = 80

[tool.poetry]
name = "docker-django-example"
version = "0.1.0"
description = ""
authors = ["Justin Crawford <bikerhiker10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
redis = "^4.3.4"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
